# Sapling

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GenerateProjects.bat  Sapling.sln  cmake_install.cmake  premake5.lua
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  cmake_install.cmake  imgui.ini
Sandbox.dir/Debug/Sandbox.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Sandbox/Sandbox.dir/Debug/: Sandbox.exe.recipe
Sandbox/Sandbox.dir/Debug/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sandbox/src/: SandboxApp.cpp
Sapling/: CMakeLists.txt  Sapling.vcxproj  Sapling.vcxproj.filters  cmake_install.cmake
Sapling.dir/Debug/Sapling.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog
Sapling/Debug/: Sapling.lib
Sapling/Sapling.dir/Debug/Sapling.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Sapling/src/: Sapling.h  sappch.cpp  sappch.h
Sapling/src/Platform/GLFW/: GLFWKeyCodes.cpp  GLFWKeyCodes.h  GLFWMouseButtonCodes.cpp  GLFWMouseButtonCodes.h
Sapling/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Sapling/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sapling/src/Sapling/: Application.cpp  Application.h  Core.h  EntryPoint.h
Sapling/src/Sapling/Core/: Application.cpp  Application.h  Base.h  DeltaTime.h  Entity.cpp  Entity.h  EntryPoint.h  GameObject.cpp  GameObject.h  Input.h  KeyCodes.cpp  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Mesh.cpp  Mesh.h  MouseButtonCodes.cpp  MouseButtonCodes.h  Transform.cpp  Transform.h  Window.h
Sapling/src/Sapling/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h
Sapling/src/Sapling/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Sapling/src/Sapling/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.h  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
lib/Debug/: Glad.lib  Sapling.lib  glfw3.lib  glm.lib
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
